# alphafold3-pytorch

./: .gitattributes  .gitignore  LICENSE  README.md  atom_attention.py  atom_cross_attention.py  atom_layout.py  ccd.py  common.py  data_setup.sh  diffusion.py  evoformer.py  feat_tests.py  feature_extraction.py  input_embedder.py  load_test_inputs.py  model.py  msa_features.py  pyproject.toml  remap_weights.py  requirements.yml  residue_constants.py  run_inference.py  sparse_utils.py  tensortrace.py  tests.py  utils.py
cloud_infrastructure/cpu/: cpu_server_cloud_init.sh  server_allocation_cpu.tf
cloud_infrastructure/gpu/: server_allocation_gpu.tf
data/: fold_input.json  fold_input_lysozyme.json  fold_input_tautomerase.json
data/fold_inputs/: debug_fold_input.json  fold_input_lysozyme.json  fold_input_multimer.json  fold_input_protein_dna_ion.json  fold_input_protein_glycan_ion.json  fold_input_protein_rna_ion.json  fold_input_tautomerase.json
data/fold_inputs/alignments/: alignment_multimer.a3m  alignment_protein_dna_ion.a3m  alignment_protein_rna_ion_b.a3m  debug_alignment.a3m
data/params/: diff_fourier_bias.pt  diff_fourier_weight.pt
feature_extraction/: contact_features.py  feature_extraction.py  msa_features.py  ref_struct_features.py  token_features.py
tests/test_lysozyme/debug_inputs/: diffusion_initial_pos.pt  diffusion_noise.pt  diffusion_randaug_rot.pt  diffusion_randaug_trans.pt  msa_shuffle_order.pt
tests/test_lysozyme/test_outputs/: batch.pt  diffusion_final_positions.pt  diffusion_positions.pt  evoformer_embeddings.pt
train/: train_tests.py
